--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <html>
 <head>
   <meta lang="en" charset="utf-8" />
+  <title>Card Guessing Game</title>
   <link rel="stylesheet" type="text/css" href="./css/style.css" />
   <script src="./js/script.js"></script>
 </head>
 <body>
+  <div>
+    <h1>Card Guessing Game</h1>
+  </div>
   <div>
     <p>
       Choose the total number of cards in the pile.
